farm module additional dtos.